--- a/Suber/app/src/main/res/layout/activity_register.xml
+++ b/Suber/app/src/main/res/layout/activity_register.xml
@@ -75,21 +75,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
-        android:checkedButton="@+id/radio_professor"
+        android:checkedButton="@+id/radio_driver"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/extra">
 
         <RadioButton
-            android:id="@+id/radio_professor"
+            android:id="@+id/radio_driver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:text="@string/driver" />
 
         <RadioButton
-            android:id="@+id/radio_student"
+            android:id="@+id/radio_passenger"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
