--- a/Suber/app/src/main/res/layout/activity_driver_panel.xml
+++ b/Suber/app/src/main/res/layout/activity_driver_panel.xml
@@ -5,7 +5,28 @@
     android:layout_width="match_parent"
     android:id="@+id/driverPanelView"
     android:layout_height="match_parent"
+    android:paddingVertical="16dp"
     tools:context=".ui.panel.DriverPanelActivity">
+
+    <TextView
+        android:id="@+id/balanceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="Balance: 0$"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/profileButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tripRecyclerView"
@@ -15,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/profileButton" />
 
     <Button
         android:id="@+id/acceptButton"
